--- a/index.html
+++ b/index.html
@@ -38,29 +38,18 @@ title: Home
     <meta property="og:type" content="website" />
     
     <meta property="og:title" content="Hack Club CTF" />
-    <meta
-      property="og:description"
-      content="A CTF for Hack Clubbers by Hack Clubbers"
-    />
-    <meta
-      property="og:image"
-      content="https://workshop-cards.hackclub.com/Hack%20Club%20CTF.png?brand=Events&fontSize=225px&caption=date%20will%BE%20here"
-    />
+    <meta property="og:description" content="A CTF for Hack Clubbers by Hack Clubbers" />
+    <meta property="og:image" content="https://workshop-cards.hackclub.com/Hack%20Club%20CTF.png?brand=Events&fontSize=225px&caption=Aug%207th%20to%208th$202020" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     
     <meta property="twitter:title" content="Hack Club CTF" />
-    <meta
-      property="twitter:description"
-      content="A CTF for Hack Clubbers by Hack Clubbers"
-    />
-    <meta
-      property="twitter:image"
-      content="https://workshop-cards.hackclub.com/Hack%20Club%20CTF.png?brand=Events&fontSize=225px&caption=date%20will%BE%20here"
-    />
-  </head>
-  <body>
+    <meta property="twitter:description" content="A CTF for Hack Clubbers by Hack Clubbers" />
+    <meta property="twitter:image" content="https://workshop-cards.hackclub.com/Hack%20Club%20CTF.png?brand=Events&fontSize=225px&caption=Aug%207th%20to%208th$202020" />
+</head>
+
+<body>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       body,
