--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ title: Home
               ">
                             <div class="card-container">
                                 <h4><b>#ctf</b></h4>
-                                <p>Visit the Slack Channel</p>
+                                <p>Visit the Slack Channel and discuss the CTF with other hackers!</p>
                             </div>
                         </div>
                     </a>
