Fixed sizing of logo on homepage

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="caption">
             <!-- <span class="border"></span> -->
-            <img height="100vh" src="logo.png">
+            <img width="40%" src="logo.png">
         </div>
     </div>
     <div style="max-width: 100vw; overflow-x: hidden;">
