--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ title: Home
         <div>
           <div class="row section">
             <a
-              href="https://portal.ctf.hackclub.com/ctfd"
+              href="https://portal.ctf.hackclub.com/ctfd/"
               style="color: white;"
             >
               <div
