Fix EST --> EDT

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ title: Home
                 <div class="card-container">
                   <h4><b>Timeline</b></h4>
                   <p>
-                    Here's a schedule of events! Times are in EST unless
+                    Here's a schedule of events! Times are in EDT unless
                     otherwise noted.
                   </p>
                 </div>
